# pycro

./: .commitlintrc.yml  .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  improvements_to_study.md  mejoras_a_esutdiar.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  commitlint.yml  develop-artifacts.yml  release-artifacts.yml  release-please.yml
docs/: agent-playbook.md  agent-registry.md  architecture-plan.md  branch-commit-workflow.md  flow-mermaids.md  perf-phase-3-closeout.md  platform-capability-matrix.md  project-vision.md  python-stub-cheatsheet.html  python-stub-cheatsheet.md  release-automation.md  release-notes-template.md  rust-api-reference.md  task-tracker.txt  validation-policy.md
docs/adr/: 0001-runtime-ownership-and-lifecycle-contract.md  0002-python-api-single-source-of-truth.md  0003-docs-first-governance-and-review-workflow.md  0004-single-crate-simplification.md  0005-python-text-rendering-api.md  0006-entry-script-local-import-resolution.md  0007-runtime-stdlib-compatibility.md  0008-macos-arm-backend-default-open-gl.md  0009-submit-render-batch-api.md  0010-phase-folder-governance-and-worktree-orchestration.md  0011-update-only-lifecycle-contract.md  0012-develop-first-integration-and-main-release-promotion.md  0013-vec2-color-numeric-coercion.md  0014-generate-stubs-project-local-default.md  0015-project-build-foundation-contract.md  0016-embedded-project-payload-build-strategy.md  0017-phase-orchestrator-ownership-and-write-constrained-worker-handoff.md  README.md
docs/agents/: README.md  agent-skills.md  orchestration-contract.md
docs/agents/skills/: README.md  adr-index-contract.md  (+23 more)
docs/phases/: README.md
docs/streams/: README.md  backend-selection-policy.md  compare-benchmark.md  incident-resolutions.md  windows-input-fix.md
examples/: README.md  compare_pycro_balls_benchmark.py  compare_pygame_balls_benchmark.py  fps_eased_balls.py  import_main.py  input_click_left_diagnostic.py  input_click_middle_diagnostic.py  input_click_right_diagnostic.py  minigame_target_burst.py  pack_gradient_cycle.py  pack_noise_scanner.py  phase01_basic_main.py  phase03_import_main.py  phase03_player.py  phase04_stdlib_math_os.py  phase04_stdlib_wave_lab.py  phase05_camera_target_pan.py  phase05_checkerboard_pan.py  phase05_compare_pycro_balls_benchmark.py  phase05_fps_eased_balls.py  phase05_gradient_cycle.py  phase05_input_movement.py  phase05_input_texture_lab.py  phase05_minigame_coin_chase.py  phase05_minigame_runner_dodge.py  phase05_minigame_target_burst.py  phase05_noise_scanner.py  phase05_runtime_draw_flush_batch.py  phase05_stopwatch_seconds.py  phase05_textures_draw_swap.py  phase05_timing_frame_pulse.py  phase08_api_surface_readability.py  phase12_vec2_color_numeric_coercion.py  phase15_embedded_payload_lab.py  phase15_embedded_payload_support.py  phase20_hot_reload_error_overlay_lab.py  phase21_window_size_rectangle_lab.py  run_compare_benchmarks.sh  windows_input_diagnostic.py
examples/assets/: ASSET_PACKS.md
examples/basic/: main.py  pycro
examples/compare/: README.md
patches/miniquad-0.4.8-windows-rawinput-fix/: .cargo_vcs_info.json  Cargo.toml  PYCRO_PATCH_NOTES.md
patches/readmouse-0.2.1-hid-system-state/: Cargo.toml
patches/rustpython-vm-0.4.0-no-wasm-bindgen/: .cargo_vcs_info.json  Cargo.toml
python/pycro/: __init__.pyi
scripts/: android_build_project.sh  ios_build_project.sh  ios_e2e_project.sh  phase15_desktop_embedded_smoke.py  phase17_web_embedded_smoke.py  phase18_android_embedded_smoke.py  phase19_ios_embedded_smoke.py  validate_governance.py
src/: api.rs  backend.rs  embedded_project.rs  lib.rs  main.rs  project.rs  runtime.rs
state/: repo-state.json
(+156 files in other folders)
