[package]
name = "pycro_cli"
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.91"
default-run = "pycro"
build = "build.rs"

[[bin]]
name = "pycro"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
rustpython-vm = { version = "0.4", features = ["importlib", "encodings", "freeze-stdlib"] }
mimalloc = "0.1"
parking_lot = "0.12"
rustpython-stdlib = "0.4"
rustpython-pylib = "0.4"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
