[package]
name = "pycro_cli"
version = "0.4.4"
edition = "2024"
license = "MIT"
rust-version = "1.91"
default-run = "pycro"
build = "build.rs"

[[bin]]
name = "pycro"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
rustpython-vm = { version = "0.4", features = ["importlib", "encodings", "freeze-stdlib"] }
ahash = "0.8"
parking_lot = "0.12"
rustpython-stdlib = "0.4"
rustpython-pylib = { version = "0.4", features = ["freeze-stdlib"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[patch.crates-io]
miniquad = { path = "patches/miniquad-0.4.8-windows-rawinput-fix" }
ahash = { path = "patches/ahash-0.8.12-wasm-no-rng" }
rand = { path = "patches/rand-0.8.5-wasm-no-rng" }
rustpython-vm = { path = "patches/rustpython-vm-0.4.0-no-wasm-bindgen" }

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
